Fix print page breaks and adjust anchor offset

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat"></noscript>
 
   <script src="app.js" charset="utf-8" async></script>
-  <!-- <script src="vendor.js" charset="utf-8" async></script> -->
 </head>
 <body>
 <div id="nav-bar">
@@ -25,12 +24,12 @@
       <div id="nav-toggle-btn" class="toggle-btn"><img alt="nav button" src="images/menu2x.png" /></div>
     </div>
     <ul id="nav-menu" class="menu">
-      <li class="item"><a class="link" href="#skills-section">Skills</a></li>
-      <li class="item"><a class="link" href="#experience-section">Experience</a></li>
-      <li class="item"><a class="link" href="#education-section">Education</a></li>
-      <li class="item"><a class="link" href="#volunteer-section">Volunteer Work</a></li>
-      <li class="item"><a class="link" href="#references-section">References</a></li>
-      <li class="item"><a class="link" href="#contact-section">Contact</a></li>
+      <li class="item"><a class="link" href="#skills-anchor">Skills</a></li>
+      <li class="item"><a class="link" href="#experience-anchor">Experience</a></li>
+      <li class="item"><a class="link" href="#education-anchor">Education</a></li>
+      <li class="item"><a class="link" href="#volunteer-anchor">Volunteer Work</a></li>
+      <li class="item"><a class="link" href="#references-anchor">References</a></li>
+      <li class="item"><a class="link" href="#contact-anchor">Contact</a></li>
     </ul>
   </div>
 </div>
@@ -62,6 +61,7 @@
 </div> <!-- end section -->
 
 <div id="skills-section" class="section">
+  <a name="skills-anchor" class="anchor"></a>
   <div class="container">
     <h2 class="title">Skills</h2>
 
@@ -120,6 +120,7 @@
 </div> <!-- end section -->
 
 <div id="experience-section" class="section">
+  <a name="experience-anchor" class="anchor"></a>
   <div class="container">
 
     <h2 class="title">Experience</h2>
@@ -154,7 +155,7 @@
       </ul>
     </div>
 
-    <div class="item">
+    <div id="experience-digitoll" class="item">
 
       <h3 class="title">Owner, <span class="alt-color">DigiToll Software</span>; May 2012 - December 2015</h3>
 
@@ -192,6 +193,7 @@
 </div> <!-- end section -->
 
 <div id="education-section" class="section">
+  <a name="education-anchor" class="anchor"></a>
   <div class="container">
     <h2 class="title">Education</h2>
 
@@ -230,6 +232,7 @@
 </div> <!-- end section -->
 
 <div id="volunteer-section" class="section">
+  <a name="volunteer-anchor" class="anchor"></a>
   <div class="container">
     <h2 class="title">Volunteer Work</h2>
     <div class="item">
@@ -251,6 +254,7 @@
 </div> <!-- end section -->
 
 <div id="references-section" class="section">
+  <a name="references-anchor" class="anchor"></a>
   <div class="container">
     <h2 class="title">References</h2>
     <div class="item">
@@ -261,7 +265,7 @@
 </div>
 
 <div id="contact-section" class="section">
-
+  <a name="contact-anchor" class="anchor"></a>
   <div class="container">
 
     <h2 class="title">Contact</h2>
