Use anchor ids instead of names, add meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Stephen Roberts</title>
+  <meta name="description" content="Full stack software engineer solving the world's problems one line of code at a time. HTML, CSS, JavaScript, NodeJS, AWS, serverless, microservices, craftsman.">
+  <meta name="keywords" content="full stack software engineer, web developer, javascript, html, css, aws, linux, microservices, craftsmanship, serverless, linux, continuous integration, deployments, rest api">
+  <link rel="author" href="https://plus.google.com/u/0/111435975431163827155" />
+
+  <title>Stephen Roberts | Full Stack Web Engineer</title>
 
   <!-- Loads the css into a style block, see the webpack config -->
   ${'\u003Cstyle\u003E'+require('./css/above-the-fold/reset.css')+require('./css/above-the-fold/initial.css')+'\u003C/style\u003E'}
@@ -61,7 +65,7 @@
 </div> <!-- end section -->
 
 <div id="skills-section" class="section">
-  <a name="skills-anchor" class="anchor"></a>
+  <a id="skills-anchor" class="anchor"></a>
   <div class="container">
     <h2 class="title">Skills</h2>
 
@@ -120,7 +124,7 @@
 </div> <!-- end section -->
 
 <div id="experience-section" class="section">
-  <a name="experience-anchor" class="anchor"></a>
+  <a id="experience-anchor" class="anchor"></a>
   <div class="container">
 
     <h2 class="title">Experience</h2>
@@ -193,7 +197,7 @@
 </div> <!-- end section -->
 
 <div id="education-section" class="section">
-  <a name="education-anchor" class="anchor"></a>
+  <a id="education-anchor" class="anchor"></a>
   <div class="container">
     <h2 class="title">Education</h2>
 
@@ -232,7 +236,7 @@
 </div> <!-- end section -->
 
 <div id="volunteer-section" class="section">
-  <a name="volunteer-anchor" class="anchor"></a>
+  <a id="volunteer-anchor" class="anchor"></a>
   <div class="container">
     <h2 class="title">Volunteer Work</h2>
     <div class="item">
@@ -254,7 +258,7 @@
 </div> <!-- end section -->
 
 <div id="references-section" class="section">
-  <a name="references-anchor" class="anchor"></a>
+  <a id="references-anchor" class="anchor"></a>
   <div class="container">
     <h2 class="title">References</h2>
     <div class="item">
@@ -265,7 +269,7 @@
 </div>
 
 <div id="contact-section" class="section">
-  <a name="contact-anchor" class="anchor"></a>
+  <a id="contact-anchor" class="anchor"></a>
   <div class="container">
 
     <h2 class="title">Contact</h2>
