--- a/src/index.html
+++ b/src/index.html
@@ -87,19 +87,20 @@
       <div class="group-container">
         <h3 class="group-title">Technology</h3>
         <div class="list">
-          <div class="skill html5"><div class="icon-container"><img class="icon" alt="html5" src="images/skills/html52x.png" /></div><div class="label">HTML5</div></div>
-          <div class="skill css"><div class="icon-container"><img class="icon" alt="css" src="images/skills/css2x.png" /></div><div class="label">CSS, LESS</div></div>
           <div class="skill javascript"><div class="icon-container"><img class="icon" alt="javascript" src="images/skills/javascript2x.png" /></div><div class="label">JavaScript</div></div>
-          <div class="skill aws"><div class="icon-container"><img class="icon" alt="aws" src="images/skills/aws2x.png" /></div><div class="label">AWS</div></div>
-          <div class="skill c"><div class="icon-container"><img class="icon" alt="c" src="images/skills/c2x.png" /></div><div class="label">ANSI C, C++</div></div>
-          <div class="skill dotnet"><div class="icon-container"><img class="icon" alt="dotnet" src="images/skills/dotnet2x.png" /></div><div class="label">C#, .NET</div></div>
-          <div class="skill sql"><div class="icon-container"><img class="icon" alt="sql" src="images/skills/sql2x.png" /></div><div class="label">SQL, No-SQL</div></div>
           <div class="skill ios"><div class="icon-container"><img class="icon" alt="ios" src="images/skills/swift2x.png" /></div><div class="label">iOS, Objective-C, Swift</div></div>
           <div class="skill ruby"><div class="icon-container"><img class="icon" alt="ruby" src="images/skills/ruby2x.png" /></div><div class="label">Ruby</div></div>
+          <div class="skill php"><div class="icon-container"><img class="icon" alt="php" src="images/skills/php2x.png" /></div><div class="label">PHP</div></div>
+          <div class="skill java"><div class="icon-container"><img class="icon" alt="java" src="images/skills/java2x.png" /></div><div class="label">Java</div></div>
+          <div class="skill html5"><div class="icon-container"><img class="icon" alt="html5" src="images/skills/html52x.png" /></div><div class="label">HTML5</div></div>
+          <div class="skill css"><div class="icon-container"><img class="icon" alt="css" src="images/skills/css2x.png" /></div><div class="label">CSS, LESS</div></div>
+          <div class="skill aws"><div class="icon-container"><img class="icon" alt="aws" src="images/skills/aws2x.png" /></div><div class="label">AWS</div></div>
+          <div class="skill document"><div class="icon-container"><img class="icon" alt="document" src="images/skills/document2x.png" /></div><div class="label">XML, JSON</div></div>
+          <div class="skill sql"><div class="icon-container"><img class="icon" alt="sql" src="images/skills/sql2x.png" /></div><div class="label">SQL, No-SQL</div></div>
           <div class="skill linux"><div class="icon-container"><img class="icon" alt="linux" src="images/skills/linux2x.png" /></div><div class="label">Linux</div></div>
           <div class="skill bash"><div class="icon-container"><img class="icon" alt="bash" src="images/skills/bash2x.png" /></div><div class="label">Bash</div></div>
-          <div class="skill php"><div class="icon-container"><img class="icon" alt="php" src="images/skills/php2x.png" /></div><div class="label">PHP</div></div>
-          <div class="skill document"><div class="icon-container"><img class="icon" alt="document" src="images/skills/document2x.png" /></div><div class="label">XML, JSON</div></div>
+          <div class="skill c"><div class="icon-container"><img class="icon" alt="c" src="images/skills/c2x.png" /></div><div class="label">ANSI C, C++</div></div>
+          <div class="skill dotnet"><div class="icon-container"><img class="icon" alt="dotnet" src="images/skills/dotnet2x.png" /></div><div class="label">C#, .NET</div></div>
         </div>
       </div>
 
@@ -131,12 +132,26 @@
 
     <div class="item">
 
-      <h3 class="title">Lead Full Stack Web Engineer, <span class="alt-color">FIDOlab</span>; March 2015 - Present</h3>
+      <h3 class="title">Owner, <span class="alt-color">Flat9 LLC</span>; January 2017 - Present</h3>
+
+      <p>Worked with clients to develop Java microservices using the Spring Boot framework for high-traffic, high-availability applications</p>
+
+      <ul class="list">
+        <li class="list-item">Developed a web application using Thymeleaf for displaying report information</li>
+        <li class="list-item">Improved internal development tools and processes</li>
+        <li class="list-item">Implemented new features and bug fixes to existing applications</li>
+      </ul>
+    </div>
+
+    <div class="item">
+
+      <h3 class="title">Lead Full Stack Web Engineer, <span class="alt-color">FIDOlab</span>; March 2015 - October 2016</h3>
 
       <p>Designed and developed full-stack web applications and mobile backends focusing on a microservices approach, serverless architectures in AWS, automation, release management, and automated testing</p>
 
       <ul class="list">
         <li class="list-item">Developed an entertainment web app, PluggedIn.com, in AngularJS using standard task runners, preprocessors, and automated build and delivery pipelines including unit, end-to-end, and visual tests</li>
+        <li class="list-item">Provisioned infrastructure with Chef</li>
         <li class="list-item">Created microservices using AWS serverless resources with APIs for use in multiple web and mobile applications</li>
         <li class="list-item">Developed a native iOS application in Swift with offline support, media player integration, and In-App Purchases with a custom IAP backend (built as a microservice) to deliver purchased resources to the app</li>
         <li class="list-item">Migrated mobile applications from using Parse mobile BaaS to using AWS resources</li>
