Implement pure css menu

--- a/src/index.html
+++ b/src/index.html
@@ -23,18 +23,19 @@
 <body>
 <div id="nav-bar">
   <div class="container">
-    <div class="layout-container">
-      <div class="avatar"><a href="#"><img alt="avatar" src="images/avatar2x.png" /></a></div>
-      <div id="nav-toggle-btn" class="toggle-btn"><img alt="nav button" src="images/menu2x.png" /></div>
+    <div class="avatar"><a href="#"><img alt="avatar" src="images/avatar2x.png" /></a></div>
+    <label for="nav-toggle-checkbox" id="nav-toggle-btn" class="toggle-btn"><img alt="nav button" src="images/menu2x.png" /></label>
+    <input id="nav-toggle-checkbox" type="checkbox" />
+    <div class="menu-container">
+      <ul id="nav-menu" class="menu">
+        <li class="item"><a class="link" href="#skills-anchor">Skills</a></li>
+        <li class="item"><a class="link" href="#experience-anchor">Experience</a></li>
+        <li class="item"><a class="link" href="#education-anchor">Education</a></li>
+        <li class="item"><a class="link" href="#volunteer-anchor">Volunteer Work</a></li>
+        <li class="item"><a class="link" href="#references-anchor">References</a></li>
+        <li class="item"><a class="link" href="#contact-anchor">Contact</a></li>
+      </ul>
     </div>
-    <ul id="nav-menu" class="menu">
-      <li class="item"><a class="link" href="#skills-anchor">Skills</a></li>
-      <li class="item"><a class="link" href="#experience-anchor">Experience</a></li>
-      <li class="item"><a class="link" href="#education-anchor">Education</a></li>
-      <li class="item"><a class="link" href="#volunteer-anchor">Volunteer Work</a></li>
-      <li class="item"><a class="link" href="#references-anchor">References</a></li>
-      <li class="item"><a class="link" href="#contact-anchor">Contact</a></li>
-    </ul>
   </div>
 </div>
 
